<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailActivity">

    <ImageView
        android:id="@+id/img_bg_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_background_detail" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_detail"
        android:contentDescription="@string/image_background_detail" />

    <ImageView
        android:id="@+id/img_bg_movies"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/teal_700"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_background" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/background_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_background" />

    <ImageView
        android:id="@+id/img_poster_detail"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:background="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="@+id/img_bg_detail"
        app:layout_constraintEnd_toEndOf="@+id/img_bg_detail"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/tv_title_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="4dp"
        android:maxLines="4"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_overview"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_poster_detail"
        app:layout_constraintTop_toBottomOf="@+id/img_bg_movies"
        app:layout_constraintVertical_bias="0.03" />

    <TextView
        android:id="@+id/tv_genre_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:maxLines="3"
        android:text="@string/genre"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_overview"
        app:layout_constraintStart_toEndOf="@+id/img_poster_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_detail"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:textColor="@color/teal_200"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/img_poster_detail"
        app:layout_constraintTop_toBottomOf="@+id/img_poster_detail"
        app:layout_constraintVertical_bias="0.10" />

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="15"
        android:text="@string/overview_description"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginEnd="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>